hasta ej 8 POO java

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,14 @@
 /Ej2Guia7/nbproject/private/
 /Ej2Guia7/build/
 /Ej3Guia7/nbproject/private/
+/Ej3Guia7/build/
+/Ej4Guia7/nbproject/private/
+/Ej4Guia7/build/
+/Ej5Guia7/nbproject/private/
+/Ej5Guia7/build/
+/Ej6Guia7/nbproject/private/
+/Ej6Guia7/build/
+/Ej7Guia7/nbproject/private/
+/Ej7Guia7/build/
+/Ej8guia7/nbproject/private/
+/Ej8guia7/build/
