hasta ej 4 Extra Guia POO

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,19 @@
 /Ej7Guia7/build/
 /Ej8guia7/nbproject/private/
 /Ej8guia7/build/
+/Ej9Guia7/nbproject/private/
+/Ej9Guia7/build/
+/Ej10Guia7/nbproject/private/
+/Ej10Guia7/build/
+/JavaApplication15/nbproject/private/
+/Ej11Guia7/nbproject/private/
+/Ej11Guia7/build/
+/Ej12Guia7/nbproject/private/
+/Ej12Guia7/build/
+/Ej1ExtraGuia7/nbproject/private/
+/Ej1ExtraGuia7/build/
+/Ej2ExtraGuia7/nbproject/private/
+/Ej2ExtraGuia7/build/
+/Ej3ExtraGuia7/nbproject/private/
+/Ej3ExtraGuia7/build/
+/Ej4ExtraGuia7/nbproject/private/
