guia 7 Objetos de java terminada

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,7 @@
 /Ej3ExtraGuia7/nbproject/private/
 /Ej3ExtraGuia7/build/
 /Ej4ExtraGuia7/nbproject/private/
+/Ej5ExtraGuia7/nbproject/private/
+/Ej5ExtraGuia7/build/
+/Ej6ExtraGuia7/nbproject/private/
+/Ej6ExtraGuia7/build/
