--- a/.gitignore
+++ b/.gitignore
@@ -1,38 +1,42 @@
-/POOej01/nbproject/private/
+/POOej01/nbproject/
 /POOej01/build/
-/Ej1Guia7/nbproject/private/
+/Ej1Guia7/nbproject/
 /Ej1Guia7/build/
-/Ej2Guia7/nbproject/private/
+/Ej2Guia7/nbproject/
 /Ej2Guia7/build/
-/Ej3Guia7/nbproject/private/
+/Ej3Guia7/nbproject/
 /Ej3Guia7/build/
-/Ej4Guia7/nbproject/private/
+/Ej4Guia7/nbproject/
 /Ej4Guia7/build/
-/Ej5Guia7/nbproject/private/
+/Ej5Guia7/nbproject/
 /Ej5Guia7/build/
-/Ej6Guia7/nbproject/private/
+/Ej6Guia7/nbproject/
 /Ej6Guia7/build/
-/Ej7Guia7/nbproject/private/
+/Ej7Guia7/nbproject/
 /Ej7Guia7/build/
-/Ej8guia7/nbproject/private/
+/Ej8guia7/nbproject/
 /Ej8guia7/build/
-/Ej9Guia7/nbproject/private/
+/Ej9Guia7/nbproject/
 /Ej9Guia7/build/
-/Ej10Guia7/nbproject/private/
+/Ej10Guia7/nbproject/
 /Ej10Guia7/build/
-/JavaApplication15/nbproject/private/
-/Ej11Guia7/nbproject/private/
+/JavaApplication15/nbproject/
+/Ej11Guia7/nbproject/
 /Ej11Guia7/build/
-/Ej12Guia7/nbproject/private/
+/Ej12Guia7/nbproject/
 /Ej12Guia7/build/
-/Ej1ExtraGuia7/nbproject/private/
+/Ej1ExtraGuia7/nbproject/
 /Ej1ExtraGuia7/build/
-/Ej2ExtraGuia7/nbproject/private/
+/Ej2ExtraGuia7/nbproject/
 /Ej2ExtraGuia7/build/
-/Ej3ExtraGuia7/nbproject/private/
+/Ej3ExtraGuia7/nbproject/
 /Ej3ExtraGuia7/build/
-/Ej4ExtraGuia7/nbproject/private/
-/Ej5ExtraGuia7/nbproject/private/
+/Ej4ExtraGuia7/nbproject/
+/Ej5ExtraGuia7/nbproject/
 /Ej5ExtraGuia7/build/
-/Ej6ExtraGuia7/nbproject/private/
+/Ej6ExtraGuia7/nbproject/
 /Ej6ExtraGuia7/build/
+/Ej1Guia7/
+/JavaApplication24/nbproject/private/
+/Ej1Colecciones/nbproject/private/
+/Ej1Colecciones/build/
