--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,12 @@
 /JavaApplication24/nbproject/private/
 /Ej1Colecciones/nbproject/private/
 /Ej1Colecciones/build/
+/JavaApplication27/nbproject/private/
+/JavaApplication27/build/
+/Ej4Colecciones/nbproject/private/
+/Ej5Colecciones/nbproject/private/
+/Ej5Colecciones/build/
+/Ej6Colecciones/nbproject/private/
+/Ej6Colecciones/build/
+/Ej1Relaciones/nbproject/private/
+/Ej1Relaciones/build/
