hasta el segundo de relaciones

--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,7 @@
 /Ej6Colecciones/build/
 /Ej1Relaciones/nbproject/private/
 /Ej1Relaciones/build/
+/Ej2Relaciones/nbproject/private/
+/Ej2Relaciones/build/
+/Ej3Relaciones/nbproject/private/
+/Ej3Relaciones/build/
