Ejercicios principales Herencia

--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,11 @@
 /Ej2Relaciones/build/
 /Ej3Relaciones/nbproject/private/
 /Ej3Relaciones/build/
+/ej2ExtraRelaciones/nbproject/private/
+/ej2ExtraRelaciones/build/
+/Ej1Herencia/nbproject/private/
+/Ej1Herencia/build/
+/Ej2Herencia/nbproject/private/
+/Ej2Herencia/build/
+/Ej4Herencia/nbproject/private/
+/Ej4Herencia/build/
