Ej extra Herencia mal echo

--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,5 @@
 /Ej2Herencia/build/
 /Ej4Herencia/nbproject/private/
 /Ej4Herencia/build/
+/Ej1ExtraHerencia/nbproject/private/
+/Ej1ExtraHerencia/build/
